# rust-template

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/configs/: config_default.toml  config_dev.toml  config_local.toml  config_prod.toml  settings.rs
src/service/: cost.rs
