[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
serde = "1.0.152"
serde_derive = "1.0.8"
#tokio = "1.23.0"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = "*"

#[dev-dependencies]
#config = "0.13.1"
#serde_derive = "1.0.8"


#[dev-dependencies]
#serde_derive = "1.0.8"
